# ftmscan-sdk

./: .gitignore  LICENSE  Pipfile  README.md  ex.py  main.py  pyproject.toml  test.py
.github/workflows/: isort.yml
client/: __init__.py
module/: account.py
modules/: __init__.py  account.py  client.py  custom_logger.py
modules/account/: __init__.py  account_module.py  account_typing.py
src/ftmscan_sdk/: __init__.py
src/ftmscan_sdk/client/: __init__.py
src/ftmscan_sdk/modules/: __init__.py
src/ftmscan_sdk/modules/account/: account_module.py
src/ftmscan_sdk/utils/: custom_logger.py
utils/: __init__.py
