[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ftmscan-sdk"
version = "0.5.4"
authors = [
  { name="Omid Shahsavarzadeh", email="omidsha@pm.me" },
  { name="Kianoush Mahboob", email="kianoushmhaboob@gmail.com" },
]
description = "A sdk for interacting with ftmscan.com"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BoysOfCannabis/ftmscan-sdk"
Issues = "https://github.com/BoysOfCannabis/ftmscan-sdk/issues"
Repository  = "https://github.com/BoysOfCannabis/ftmscan-sdk.git"